Bug 512266 - JSON.stringify for various special characters should produce the corresponding one-character escapes.  r=pbiggar